Changed set display to table and fixed some CSS issues such as the Create button being too close to the border of the navbar.

--- a/flash_card/static/flash_card/css/main.css
+++ b/flash_card/static/flash_card/css/main.css
@@ -1,3 +1,12 @@
+#navbar-container {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.counter {
+
+}
+
 .list-flashcard {
     background: black;
     color: white;
